--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DoYouGoToSchool</title>
+    <title>DoYouGoToSchool??</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
