--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="canonical" href="https://Quandinh030106.github.io/index.html">
     <style>
       body {
-        background-image: linear-gradient(to top right, #18a5a7, #bfffc7);
+        background-image: linear-gradient(to top left, #18a5a7, #bfffc7);
+        background-size: cover;
+        background-repeat: no-repeat;
       }
     </style>
   </head>
