--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
   </head>
   <body>
+    <div class='class-container'>
     <h1>BẠN CÓ ĐI HỌC KHÔNG??</h1>
     <button>
       <a href="https://aepxtchcalysta.github.io/ClassExerciseForPython/"
@@ -25,5 +26,6 @@
       >
     </button>
     <button><a href="link_di_hoc.html">Tôi Có Đi Học</a></button>
+    </div>
   </body>
 </html>
