--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >Tôi Không Đi Học</a
       >
     </button>
-    <button><a href="link_di_hoc.html">Tôi Có Đi Học</a></button>
+    <button><a href="https://aepxtchcalysta.github.io/ClassExerciseForPython/">Tôi Có Đi Học</a></button>
     </div>
   </body>
 </html>
